--- a/index.html
+++ b/index.html
@@ -287,8 +287,9 @@ Have you had this pain for more than six months?
 [[Yes-&gt;Pain longer than six months]]
 
 [[No-&gt;Pain less than six months]]
-</tw-passagedata><tw-passagedata pid="3" name="Stop" tags="" position="925,800" size="100,100">I&#39;m sorry, this program does not seem applicable for you yet.
+</tw-passagedata><tw-passagedata pid="3" name="Stop" tags="" position="925,800" size="100,100">&lt;h1&gt;Not Yet&lt;/h1&gt;
 
+I&#39;m sorry, this program does not seem applicable for you yet.
 If you wish to return to the previous page, press the back button on the sidebar. </tw-passagedata><tw-passagedata pid="4" name="Pain longer than six months" tags="" position="700,225" size="100,100">&lt;h1&gt;Medical Doctor&lt;/h1&gt;
 Have you seen a licensed medical doctor about this pain?
 
@@ -342,14 +343,16 @@ If you are sure your condition is not life threatening, and that the licensed me
 
 [[Continue this course-&gt;Yes it is one of these]] 
 
-[[Exit this course-&gt;Short exit]]</tw-passagedata><tw-passagedata pid="14" name="I am skeptical that stress and tension can cause this pain" tags="" position="1025,425" size="100,100">Being skepitcal is a good place to be. 
+[[Exit this course-&gt;Short exit]]</tw-passagedata><tw-passagedata pid="14" name="I am skeptical that stress and tension can cause this pain" tags="" position="1025,425" size="100,100">&lt;h1&gt;Open Mind&lt;/h1&gt;
+Being skepitcal is a good place to be. 
 It means you may be open minded to new possibilites.
 Are you open minded to new possibilities?
 
 [[Yes I am open to new possibilities]]
 
 [[No I am not open to new possibilities-&gt;Stop]]
-</tw-passagedata><tw-passagedata pid="15" name="Yes I am open to new possibilities" tags="" position="1025,625" size="100,100">It&#39;s good you are open to new possibilities. 
+</tw-passagedata><tw-passagedata pid="15" name="Yes I am open to new possibilities" tags="" position="1025,625" size="100,100">&lt;h1&gt;New Possibilities&lt;/h1&gt;
+It&#39;s good you are open to new possibilities. 
 With this mindset you will heal yourself faster.
 
 [[Let&#39;s continue-&gt;Have you tried any of these?]] </tw-passagedata><tw-passagedata pid="16" name="Have you tried any of these?" tags="A-list-of-things" position="1375,325" size="100,100">&lt;h1&gt;Modalities&lt;/h1&gt;
@@ -1192,7 +1195,8 @@ You will read out ALOUD the following question:
 &lt;span class=&quot;green-text&quot;&gt;&quot;Right now, what emotion am I feeling?&quot;&lt;/span&gt;
 
 After reading this out aloud you will [[scan your body to notice the sensations and label them as emotions]]
-</tw-passagedata><tw-passagedata pid="59" name="I don&#39;t believe stress and tension causes this pain" tags="" position="1225,350" size="100,100">Stress and tension and thoughts can lead to physiological changes.
+</tw-passagedata><tw-passagedata pid="59" name="I don&#39;t believe stress and tension causes this pain" tags="" position="1225,350" size="100,100">&lt;h1&gt;Stress and Physiology&lt;/h1&gt;
+Stress and tension and thoughts can lead to physiological changes.
 
 Examples:
 &lt;ul&gt;
@@ -1858,7 +1862,7 @@ Please use the back button in the top left toolbar to return to your previous pa
     &lt;img src=&quot;title-flowery-good.jpeg&quot; alt=&quot;Cover&quot; style=&quot;width: 100%; height: auto;&quot;/&gt;
 
     &lt;!-- Glowing button --&gt;
-    &lt;span class=&quot;glow-button&quot;&gt;&lt;&lt;link &quot;BEGIN v2.7&quot;&gt;&gt;&lt;&lt;goto &quot;Begin&quot;&gt;&gt;&lt;&lt;/link&gt;&gt;&lt;/span&gt;
+    &lt;span class=&quot;glow-button&quot;&gt;&lt;&lt;link &quot;BEGIN v2.9&quot;&gt;&gt;&lt;&lt;goto &quot;Begin&quot;&gt;&gt;&lt;&lt;/link&gt;&gt;&lt;/span&gt;
 &lt;/div&gt;
 
 &lt;style&gt;
