--- a/index.html
+++ b/index.html
@@ -374,10 +374,8 @@ Have you tried at least one of these to heal yourself?
 [[Yes I have tried at least one of these]]
 
 [[What I have tried is not listed]]
-</tw-passagedata><tw-passagedata pid="17" name="Yes I have tried at least one of these" tags="" position="1575,150" size="100,100">&lt;h1&gt;Understanding or Solution&lt;/h1&gt;
-Given that you&#39;ve tried at least one method to alleviate your pain, I&#39;m presuming that it didn&#39;t work and you are still here seeking a solution.
-
-With that in mind, let me ask a fundamental question.
+</tw-passagedata><tw-passagedata pid="17" name="Yes I have tried at least one of these" tags="" position="1575,150" size="100,100">&lt;h1&gt;Understanding or the Solution?&lt;/h1&gt;
+Given that you&#39;ve tried at least one method to alleviate your pain, I&#39;m presuming that it didn&#39;t work and you are still here seeking a solution. With that in mind, let me ask a fundamental question.
 
 Is understanding what is causing the pain more important to you, or doing the solution to get rid of the pain more important?
 
