--- a/index.html
+++ b/index.html
@@ -1030,7 +1030,7 @@ You might be wondering if I&#39;m kidding. I&#39;m not. Getting pain free is as 
 
 But don&#39;t worry, now that you know the high level steps, we&#39;re going to break all this down step by step in the next few chapters and tie it to everything you have learned so far. 
 
-[[What was going on in your life when your pain began?]]
+Now let&#39;s consider [[What was going on in your life when your pain began?]]
 
 
 
@@ -1051,7 +1051,7 @@ You can see in this clip see the character Sheldon seems quite calm and happy, d
   Your browser does not support the video tag.
 &lt;/video&gt;
 
-Can you relate to events like this happening in your life?
+Can you relate to events like this happening in your life? Where you thought you were ok with something, but really there is repressed anger about it?
 
 [[Continue-&gt;SheldonAngry]]</tw-passagedata><tw-passagedata pid="52" name="Continue only after you have spent the necessary time processing what happened" tags="" position="1525,1425" size="100,100">&lt;h1&gt;What Was Down Memory Lane?&lt;/h1&gt;
 How was that exercise?
@@ -1840,7 +1840,7 @@ Please use the back button in the top left toolbar to return to your previous pa
     &lt;img src=&quot;title-flowery-good.jpeg&quot; alt=&quot;Cover&quot; style=&quot;width: 100%; height: auto;&quot;/&gt;
 
     &lt;!-- Glowing button --&gt;
-    &lt;span class=&quot;glow-button&quot;&gt;&lt;&lt;link &quot;BEGIN v3.0&quot;&gt;&gt;&lt;&lt;goto &quot;Begin&quot;&gt;&gt;&lt;&lt;/link&gt;&gt;&lt;/span&gt;
+    &lt;span class=&quot;glow-button&quot;&gt;&lt;&lt;link &quot;BEGIN v3.1&quot;&gt;&gt;&lt;&lt;goto &quot;Begin&quot;&gt;&gt;&lt;&lt;/link&gt;&gt;&lt;/span&gt;
 &lt;/div&gt;
 
 &lt;style&gt;
@@ -1937,7 +1937,7 @@ What was out of your control?
 It could be one of these, or something else:
 
 &lt;ul&gt;
-  &lt;li&gt;A relationship loss&lt;/li&gt;
+  &lt;li&gt;A relationship loss (like Sheldon)&lt;/li&gt;
   &lt;li&gt;A significant financial loss&lt;/li&gt;
   &lt;li&gt;An illness of a loved one&lt;/li&gt;
   &lt;li&gt;A death of a loved one&lt;/li&gt;
@@ -1948,7 +1948,7 @@ It could be one of these, or something else:
 Be //very// honest with yourself. 
 Unfilter and uncensor what you are writing. 
 It is only for you. Write whatever comes up. You are going to rip this up afterwards.
-If you&#39;re ok with other people reading what you&#39;ve written you have probably not been honest. Let your mind flow freely and pour your heart out. Activate your feeling brain while doing this exercise. Notice all the emotions that come up, and especially don&#39;t filter out anger.
+If you&#39;re ok with other people reading what you&#39;ve written you have probably not been honest. Let your mind flow freely and pour your heart out. Activate your feeling brain while doing this exercise. Notice all the emotions that come up, and especially don&#39;t filter out anger. Rewatch the previous video if you need to.
 
 [[Continue only after you have spent the necessary time processing what happened]]
 </tw-passagedata></tw-storydata>
