--- a/index.html
+++ b/index.html
@@ -1183,7 +1183,7 @@ Examples:
 &lt;li&gt;Being stuck in traffic can raise the blood pressure.&lt;/li&gt;
 &lt;li&gt;The thought of a lemon can make someone&#39;s mouth water.&lt;/li&gt;
 &lt;li&gt;Watching a scary movie can cause the heart to race.&lt;/li&gt;
-&lt;li&gt;Being scared can cause you hairs to rise&lt;/li&gt;
+&lt;li&gt;Being scared can cause your hairs to rise&lt;/li&gt;
 &lt;/ul&gt;
 Do these help you to change your mind that stress and tension could also cause physical pain?
 
@@ -1840,7 +1840,7 @@ Please use the back button in the top left toolbar to return to your previous pa
     &lt;img src=&quot;title-flowery-good.jpeg&quot; alt=&quot;Cover&quot; style=&quot;width: 100%; height: auto;&quot;/&gt;
 
     &lt;!-- Glowing button --&gt;
-    &lt;span class=&quot;glow-button&quot;&gt;&lt;&lt;link &quot;BEGIN v3.1&quot;&gt;&gt;&lt;&lt;goto &quot;Begin&quot;&gt;&gt;&lt;&lt;/link&gt;&gt;&lt;/span&gt;
+    &lt;span class=&quot;glow-button&quot;&gt;&lt;&lt;link &quot;BEGIN v3.2&quot;&gt;&gt;&lt;&lt;goto &quot;Begin&quot;&gt;&gt;&lt;&lt;/link&gt;&gt;&lt;/span&gt;
 &lt;/div&gt;
 
 &lt;style&gt;
@@ -1906,7 +1906,7 @@ The consequence of reading this book will help you become pain free but you may 
 [[No this is not for me, I&#39;m out of here-&gt;Short exit]] </tw-passagedata><tw-passagedata pid="85" name="Begin2" tags="" position="600,75" size="100,100">&lt;h1&gt;Engage&lt;/h1&gt;
 Like learning to ride a bicycle 🚴‍🚴‍♀️🚴‍♂️, you cannot just read about how to ride, but you must get on the bicicyle several times to be able to learn to ride it. The same for learning how to swim 🏊‍♂️🏊‍♀️🏊‍♂️. You must splash around and try things for quite a bit before you can learn how to swim, no matter how much you read about it.
 
-So plan to set aside a couple of hours to fully engage in the experiences described in this book and then time for a daily practice to master the techniques.
+So plan to set aside a couple of hours to &lt;i&gt;fully engage&lt;/i&gt; in the experiences described in this book and then set aside some time for a daily practice to master the techniques.
 
 [[Feedback]] from you is invaluable, and this book is continually refined based on your insights and updates&lt;span class=&quot;secret-dot&quot;&gt;&lt;a data-passage=&quot;Book Dedication&quot;&gt;.&lt;/a&gt;&lt;/span&gt;
 
