--- a/index.html
+++ b/index.html
@@ -1117,7 +1117,7 @@ Keep going for fifteen minutes.
 
 Excellent.
 
-[[Let&#39;s consider the point of the journaling]]</tw-passagedata><tw-passagedata pid="56" name="Let&#39;s consider the point of the journaling" tags="" position="2450,1400" size="100,100">&lt;h1&gt;Your Limbic System Awakens&lt;/h1&gt;
+[[Let&#39;s consider the point of the journaling]]</tw-passagedata><tw-passagedata pid="56" name="Let&#39;s consider the point of the journaling" tags="" position="2400,1375" size="100,100">&lt;h1&gt;Your Limbic System Awakens&lt;/h1&gt;
 The reason for the journaling is to wake up your limbic system even more.
 The more honest and unfiltered you are the more your limbic system is awake.
 The journaling is just for you. You can rip it up or delete it as you wish.
@@ -1128,7 +1128,7 @@ If pain levels are going down, that&#39;s excellent.
 If pain levels are going up, don&#39;t worry, it&#39;s proof that the process is working.
 
 It is now time for the emotional meditation.
-Let&#39;s read about the [[preparation for the emotional meditation.]]</tw-passagedata><tw-passagedata pid="57" name="preparation for the emotional meditation." tags="Recap" position="2500,1550" size="100,100">&lt;h1&gt;Lets Summarize Again&lt;/h1&gt;
+Let&#39;s read about the [[preparation for the emotional meditation.]]</tw-passagedata><tw-passagedata pid="57" name="preparation for the emotional meditation." tags="Recap" position="2500,1550" size="100,100">&lt;h1&gt;Emotional Meditation&lt;/h1&gt;
 The emotional meditation is the heart of this program.
 
 It&#39;s a meditation where you focus on your emotions and just allow them to come up and label them. It&#39;s as simple as that and has several benefits.
@@ -1826,7 +1826,7 @@ Please use the back button in the top left toolbar to return to your previous pa
     &lt;img src=&quot;title-flowery-good.jpeg&quot; alt=&quot;Cover&quot; style=&quot;width: 100%; height: auto;&quot;/&gt;
 
     &lt;!-- Glowing button --&gt;
-    &lt;span class=&quot;glow-button&quot;&gt;&lt;&lt;link &quot;BEGIN v3.3&quot;&gt;&gt;&lt;&lt;goto &quot;Begin&quot;&gt;&gt;&lt;&lt;/link&gt;&gt;&lt;/span&gt;
+    &lt;span class=&quot;glow-button&quot;&gt;&lt;&lt;link &quot;BEGIN v3.4&quot;&gt;&gt;&lt;&lt;goto &quot;Begin&quot;&gt;&gt;&lt;&lt;/link&gt;&gt;&lt;/span&gt;
 &lt;/div&gt;
 
 &lt;style&gt;
@@ -1937,8 +1937,7 @@ It is only for you. Write whatever comes up. You are going to rip this up afterw
 If you&#39;re ok with other people reading what you&#39;ve written you have probably not been honest. Let your mind flow freely and pour your heart out. Activate your feeling brain while doing this exercise. Notice all the emotions that come up, and especially don&#39;t filter out anger. Rewatch the previous video if you need to.
 
 [[Continue only after you have spent the necessary time processing what happened]]
-</tw-passagedata><tw-passagedata pid="89" name="LabelSheldonVideo" tags="" position="2350,1575" size="100,100">
-&lt;h1&gt;Labeling Emotions&lt;/h1&gt;
+</tw-passagedata><tw-passagedata pid="89" name="LabelSheldonVideo" tags="" position="2350,1575" size="100,100">&lt;h1&gt;Labeling Emotions&lt;/h1&gt;
 In this video clip, Sheldon (in the red shirt) is unusually difficult when he is upset. Penny discovers that by labeling his emotions he feels better. Watch this video and take note of what emotion is labeled. Notice how the character Sheldon feels after the emotion is labeled and acknowledged. 
 &lt;style&gt;
   .responsive-video {
@@ -1951,9 +1950,9 @@ In this video clip, Sheldon (in the red shirt) is unusually difficult when he is
   Your browser does not support the video tag.
 &lt;/video&gt;
 
-This is a simple and powerful technique. You will be utilizing this technique in the emotional meditation to label &lt;i&gt;your own emotions&lt;/i&gt; and then acknowledge them yourself.
+Watch this clip again if you need to. This is a simple and powerful technique. You will be utilizing this technique in the emotional meditation to label &lt;i&gt;your own emotions&lt;/i&gt; and then acknowledge them yourself.
 
-[[Let&#39;s recap the program-&gt;ProgramRecap]] </tw-passagedata><tw-passagedata pid="90" name="ProgramRecap" tags="" position="2200,1575" size="100,100">Before we start it, let&#39;s recall the main points of this program:
+[[Continue-&gt;ProgramRecap]] </tw-passagedata><tw-passagedata pid="90" name="ProgramRecap" tags="" position="2200,1575" size="100,100">Before we start it, let&#39;s recall the main points of this program:
 
 &lt;ul&gt;
   &lt;li&gt;The parts of the brain that experience emotional pain and physical pain overlap&lt;/li&gt;
