--- a/index.html
+++ b/index.html
@@ -1826,7 +1826,7 @@ Please use the back button in the top left toolbar to return to your previous pa
     &lt;img src=&quot;title-flowery-good.jpeg&quot; alt=&quot;Cover&quot; style=&quot;width: 100%; height: auto;&quot;/&gt;
 
     &lt;!-- Glowing button --&gt;
-    &lt;span class=&quot;glow-button&quot;&gt;&lt;&lt;link &quot;BEGIN v3.4&quot;&gt;&gt;&lt;&lt;goto &quot;Begin&quot;&gt;&gt;&lt;&lt;/link&gt;&gt;&lt;/span&gt;
+    &lt;span class=&quot;glow-button&quot;&gt;&lt;&lt;link &quot;BEGIN v3.5&quot;&gt;&gt;&lt;&lt;goto &quot;Begin&quot;&gt;&gt;&lt;&lt;/link&gt;&gt;&lt;/span&gt;
 &lt;/div&gt;
 
 &lt;style&gt;
@@ -1938,7 +1938,7 @@ If you&#39;re ok with other people reading what you&#39;ve written you have prob
 
 [[Continue only after you have spent the necessary time processing what happened]]
 </tw-passagedata><tw-passagedata pid="89" name="LabelSheldonVideo" tags="" position="2350,1575" size="100,100">&lt;h1&gt;Labeling Emotions&lt;/h1&gt;
-In this video clip, Sheldon (in the red shirt) is unusually difficult when he is upset. Penny discovers that by labeling his emotions he feels better. Watch this video and take note of what emotion is labeled. Notice how the character Sheldon feels after the emotion is labeled and acknowledged. 
+In this video clip, Sheldon (in the red shirt) is unusually difficult when he is upset. Ignore the German subtitles. Penny discovers that by labeling his emotions he feels better. Watch this video and take note of what emotion is labeled. Notice how the character Sheldon feels after the emotion is labeled and acknowledged. 
 &lt;style&gt;
   .responsive-video {
     width: 100%;
@@ -1950,7 +1950,7 @@ In this video clip, Sheldon (in the red shirt) is unusually difficult when he is
   Your browser does not support the video tag.
 &lt;/video&gt;
 
-Watch this clip again if you need to. This is a simple and powerful technique. You will be utilizing this technique in the emotional meditation to label &lt;i&gt;your own emotions&lt;/i&gt; and then acknowledge them yourself.
+Watch this clip again if you need to. This is a simple and powerful technique. You will be utilizing this technique in the emotional meditation to label &lt;i&gt;your own emotions&lt;/i&gt; and then acknowledge them yourself. You are going to heal yourself.
 
 [[Continue-&gt;ProgramRecap]] </tw-passagedata><tw-passagedata pid="90" name="ProgramRecap" tags="" position="2200,1575" size="100,100">Before we start it, let&#39;s recall the main points of this program:
 
