--- a/index.html
+++ b/index.html
@@ -1826,7 +1826,7 @@ Please use the back button in the top left toolbar to return to your previous pa
     &lt;img src=&quot;title-flowery-good.jpeg&quot; alt=&quot;Cover&quot; style=&quot;width: 100%; height: auto;&quot;/&gt;
 
     &lt;!-- Glowing button --&gt;
-    &lt;span class=&quot;glow-button&quot;&gt;&lt;&lt;link &quot;BEGIN v3.5&quot;&gt;&gt;&lt;&lt;goto &quot;Begin&quot;&gt;&gt;&lt;&lt;/link&gt;&gt;&lt;/span&gt;
+    &lt;span class=&quot;glow-button&quot;&gt;&lt;&lt;link &quot;BEGIN v3.6&quot;&gt;&gt;&lt;&lt;goto &quot;Begin&quot;&gt;&gt;&lt;&lt;/link&gt;&gt;&lt;/span&gt;
 &lt;/div&gt;
 
 &lt;style&gt;
@@ -1952,7 +1952,8 @@ In this video clip, Sheldon (in the red shirt) is unusually difficult when he is
 
 Watch this clip again if you need to. This is a simple and powerful technique. You will be utilizing this technique in the emotional meditation to label &lt;i&gt;your own emotions&lt;/i&gt; and then acknowledge them yourself. You are going to heal yourself.
 
-[[Continue-&gt;ProgramRecap]] </tw-passagedata><tw-passagedata pid="90" name="ProgramRecap" tags="" position="2200,1575" size="100,100">Before we start it, let&#39;s recall the main points of this program:
+[[Continue-&gt;ProgramRecap]] </tw-passagedata><tw-passagedata pid="90" name="ProgramRecap" tags="" position="2200,1575" size="100,100">&lt;h1&gt;Program Recap&lt;/h1&gt;
+Before we start it, let&#39;s recall the main points of this program:
 
 &lt;ul&gt;
   &lt;li&gt;The parts of the brain that experience emotional pain and physical pain overlap&lt;/li&gt;
