--- a/index.html
+++ b/index.html
@@ -849,7 +849,7 @@ It&#39;s good that you have experienced all of these emotions at some point or t
 
 Let&#39;s talk about one emotion in particular that is often uncomfortable for many people. It is not a polite emotion, and it is quite often considered inappropriate and rude. This emotion is anger. 
 
-Watch this video and notice how Sheldon reacts when the guys start arguing with each other. Watching them argue triggers him and brings back his childhood memories of his parents anger.
+Watch this video and notice how Sheldon (the character wearing a jacket and red t-shirt) reacts when the guys (Howard and Raj) start arguing with each other. Listen to their tone of voice. Watching them argue triggers him and brings back his childhood memories of his parents anger. Notice Sheldons tone of voice and facial expressions. Watch the video again if you need to.
 
 &lt;style&gt;
   .responsive-video {
@@ -864,7 +864,7 @@ Watch this video and notice how Sheldon reacts when the guys start arguing with 
 
 Perhaps you can relate to Sheldon, having seen angry people, expecially your primary caregivers in your early childhood.
 
-[[Let&#39;s explore your reaction and behaviour to anger-&gt;Anger]] </tw-passagedata><tw-passagedata pid="43" name="I have only experienced some of these emotions but not all" tags="" position="775,1300" size="100,100">If you have experienced only some of these emotions, but not all of them, then it&#39;s possible that you are holding yourself back from experiencing all of them. 
+[[Let&#39;s explore your experience of anger-&gt;Anger]] </tw-passagedata><tw-passagedata pid="43" name="I have only experienced some of these emotions but not all" tags="" position="775,1300" size="100,100">If you have experienced only some of these emotions, but not all of them, then it&#39;s possible that you are holding yourself back from experiencing all of them. 
 
 Would you be open to allowing yourself to experience all of these emotions shown on the previous page?
 
@@ -1811,7 +1811,7 @@ Please use the back button in the top left toolbar to return to your previous pa
     &lt;img src=&quot;title-flowery-good.jpeg&quot; alt=&quot;Cover&quot; style=&quot;width: 100%; height: auto;&quot;/&gt;
 
     &lt;!-- Glowing button --&gt;
-    &lt;span class=&quot;glow-button&quot;&gt;&lt;&lt;link &quot;BEGIN v3.7&quot;&gt;&gt;&lt;&lt;goto &quot;Begin&quot;&gt;&gt;&lt;&lt;/link&gt;&gt;&lt;/span&gt;
+    &lt;span class=&quot;glow-button&quot;&gt;&lt;&lt;link &quot;BEGIN v3.8&quot;&gt;&gt;&lt;&lt;goto &quot;Begin&quot;&gt;&gt;&lt;&lt;/link&gt;&gt;&lt;/span&gt;
 &lt;/div&gt;
 
 &lt;style&gt;
