--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ var LZString=function(){var r=String.fromCharCode,o="ABCDEFGHIJKLMNOPQRSTUVWXYZa
 		<div id="init-lacking"><p>Browser lacks capabilities required to play.</p><p>Upgrade or switch to another browser.</p></div>
 		<div id="init-loading"><div>Loading&hellip;</div></div>
 	</div>
-	<tw-storydata name="HealYourPa.in" startnode="81" creator="Twine" creator-version="2.9.2" format="SugarCube" format-version="2.37.3" ifid="CE210ACC-0486-4226-8F64-82BB19326DCA" options="" tags="" zoom="0.3" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css">.red-text {
+	<tw-storydata name="HealYourPa.in" startnode="81" creator="Twine" creator-version="2.9.2" format="SugarCube" format-version="2.37.3" ifid="CE210ACC-0486-4226-8F64-82BB19326DCA" options="" tags="" zoom="0.6" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css">.red-text {
   font-size: 24px;
   color: red;
 }
@@ -1803,7 +1803,7 @@ Please use the back button in the top left toolbar to return to your previous pa
     &lt;img src=&quot;title-flowery-good.jpeg&quot; alt=&quot;Cover&quot; style=&quot;width: 100%; height: auto;&quot;/&gt;
 
     &lt;!-- Glowing button --&gt;
-    &lt;span class=&quot;glow-button&quot;&gt;&lt;&lt;link &quot;BEGIN v3.9&quot;&gt;&gt;&lt;&lt;goto &quot;Begin&quot;&gt;&gt;&lt;&lt;/link&gt;&gt;&lt;/span&gt;
+    &lt;span class=&quot;glow-button&quot;&gt;&lt;&lt;link &quot;BEGIN v4.0&quot;&gt;&gt;&lt;&lt;goto &quot;Begin&quot;&gt;&gt;&lt;&lt;/link&gt;&gt;&lt;/span&gt;
 &lt;/div&gt;
 
 &lt;style&gt;
@@ -1977,7 +1977,7 @@ Choose one of the following links:
      &lt;&lt;goto &#39;Anger accepting&#39;&gt;&gt;
 &lt;&lt;/link&gt;&gt;</tw-passagedata><tw-passagedata pid="92" name="WhatItLooksLike" tags="" position="175,2025" size="100,100">&lt;h1&gt;What it looks like once you allow the emotions&lt;/h1&gt;
 
-What does it look like when you are aware of ALL your emotions? Once again, I share with you a short clip with Sheldon where he experiences anger. Notice the question that triggers him. Then notice the internal processing in his mind as he imagines how he feels. And then notice the final result of his answer back to his room-mate, once he has allowed himself to experience the rage.
+What does it look like when you are aware of ALL your emotions? Once again, I share with you a short clip with Sheldon where he experiences anger. Notice the question that triggers him. Then notice the internal processing in his mind as he imagines how he feels. Listen to the tone of his voice as he expresses himself at the Grand Canyon. And then notice the final result of his answer back to his room-mate, once he has allowed himself to experience the rage. He has become the TinMan with a heart.
 
 &lt;style&gt;
   .responsive-video {
@@ -1990,7 +1990,7 @@ What does it look like when you are aware of ALL your emotions? Once again, I sh
   Your browser does not support the video tag.
 &lt;/video&gt;
 
-This video is an excellent example of how you can handle things that trigger you. Feel the emotions first. Then make the decisions. 
+This video is an excellent example of how you can handle things that trigger you. Feel the emotions first. Only then make the decisions and take any actions. The mistake most people make is block the negative emotions, take harmful actions first in an effort to make themselves feel better. 
 
 [[Now lets cover the final aspect of your healing-&gt;Let&#39;s talk about exercise]]</tw-passagedata></tw-storydata>
 	<script id="script-sugarcube" type="text/javascript">
