--- a/index.html
+++ b/index.html
@@ -1990,7 +1990,7 @@ What does it look like when you are aware of ALL your emotions? Once again, I sh
   Your browser does not support the video tag.
 &lt;/video&gt;
 
-This video is an excellent example of how you can handle things that trigger you. Feel the emotions first. Only then make the decisions and take any actions. The mistake most people make is block the negative emotions, take harmful actions first in an effort to make themselves feel better. 
+This video is an excellent example of how you can handle things that trigger you. Feel the emotions first. Only then make the decisions and take any actions. The mistake most people make is block the negative emotions, take harmful actions first in an effort to make themselves feel better. This is why anger and rage are misunderstood. Most people don&#39;t allow themselves to feel anger and rage first, and then make the decision afterwards. You may have heart frequently, cool off first, calm down, then take action. Well this exactly what healing yourself is all about. Allow all emotions. Once the emotions have calmed down, then take action.
 
 [[Now lets cover the final aspect of your healing-&gt;Let&#39;s talk about exercise]]</tw-passagedata></tw-storydata>
 	<script id="script-sugarcube" type="text/javascript">
