--- a/index.html
+++ b/index.html
@@ -970,7 +970,7 @@ When you&#39;re in the feeling brain, its more like sitting in a jacuzzi, the fe
 In summary, feelings are nothing to //understand//, feelings are just to be experienced.
 What&#39;s even more important is that feelings don&#39;t have to make sense, in fact feelings don&#39;t have a meaning unless we assign one to them.
 
-[[Ok, I can see the difference experiences between the thinking and feeling brain]]
+[[Ok, I can see the different experiences between the thinking and feeling brain]]
 
 
 
@@ -986,7 +986,7 @@ So, you see, one of life’s biggest choices—our career—is deeply connected 
 
 [[Yes, I can imagine that I have a feeling brain and a thinking brain-&gt;Yes I can understand the difference between the thinking brain and feeling brain]]
 
-[[No it is hard for me to imagine a thinking and feeling brain-&gt;Stop]]</tw-passagedata><tw-passagedata pid="49" name="Ok, I can see the difference experiences between the thinking and feeling brain" tags="A-list-of-things" position="725,1450" size="100,100">&lt;h1&gt;Limbic System Recap&lt;/h1&gt;
+[[No it is hard for me to imagine a thinking and feeling brain-&gt;Stop]]</tw-passagedata><tw-passagedata pid="49" name="Ok, I can see the different experiences between the thinking and feeling brain" tags="A-list-of-things" position="725,1450" size="100,100">&lt;h1&gt;Limbic System Recap&lt;/h1&gt;
 Ok, we are now at a place where we can start focusing on the solution to healing.
 
 Let&#39;s recap a few major points:
@@ -1867,7 +1867,7 @@ The consequence of reading this book will help you become pain free but you may 
 [[YES despite watching this video, I really want to get better!-&gt;Are you suffering from chronic pain]]
 
 [[No this is not for me, I&#39;m out of here-&gt;Short exit]] </tw-passagedata><tw-passagedata pid="85" name="Begin2" tags="" position="600,75" size="100,100">&lt;h1&gt;Engage&lt;/h1&gt;
-Like learning to ride a bicycle 🚴‍🚴‍♀️🚴‍♂️, you cannot just read about how to ride, but you must get on the bicicyle several times to be able to learn to ride it. The same for learning how to swim 🏊‍♂️🏊‍♀️🏊‍♂️. You must splash around and try things for quite a bit before you can learn how to swim, no matter how much you read about it.
+Like learning to ride a bicycle 🚴‍🚴‍♀️🚴‍♂️, you cannot just read about how to ride, but you must get on the bicycle several times to be able to learn to ride it. The same for learning how to swim 🏊‍♂️🏊‍♀️🏊‍♂️. You must splash around and try things for quite a bit before you can learn how to swim, no matter how much you read about it.
 
 So plan to set aside a couple of hours to &lt;i&gt;fully engage&lt;/i&gt; in the experiences described in this book and then set aside some time for a daily practice to master the techniques&lt;span class=&quot;secret-dot&quot;&gt;&lt;a data-passage=&quot;Let&#39;s talk about what to do next&quot;&gt;.&lt;/a&gt;&lt;/span&gt;
 
@@ -1915,7 +1915,7 @@ If you&#39;re ok with other people reading what you&#39;ve written you have prob
 
 [[Continue only after you have spent the necessary time processing what happened]]
 </tw-passagedata><tw-passagedata pid="89" name="LabelSheldonVideo" tags="" position="2350,1575" size="100,100">&lt;h1&gt;Labeling Emotions&lt;/h1&gt;
-In this video clip, Sheldon (in the red shirt) is unusually difficult when he is upset. Ignore the German subtitles. Penny discovers that by labeling his emotions he feels better. Watch this video and take note of what emotion is labeled. Notice how the character Sheldon feels after the emotion is labeled and acknowledged. 
+In this video clip, Sheldon usually becomes difficult to calm down when he is upset (ignore the German subtitles). Fortunately Penny discovers that by labeling his emotions he feels better. Watch this video and take note of what emotion is labeled. Notice how the character Sheldon feels after the emotion is labeled and acknowledged. 
 &lt;style&gt;
   .responsive-video {
     width: 100%;
@@ -1927,7 +1927,7 @@ In this video clip, Sheldon (in the red shirt) is unusually difficult when he is
   Your browser does not support the video tag.
 &lt;/video&gt;
 
-Watch this clip again if you need to. This is a simple and powerful technique. You will be utilizing this technique in the emotional meditation to label &lt;i&gt;your own emotions&lt;/i&gt; and then acknowledge them yourself. You are going to heal yourself.
+Watch this clip again if you need to. This is a simple and powerful technique. You will be utilizing this technique in the emotional meditation to label &lt;i&gt;your own emotions&lt;/i&gt; and then acknowledge them yourself. You are going to use this technique heal yourself and I will give you specific details on how to do this.
 
 [[Continue-&gt;ProgramRecap]] </tw-passagedata><tw-passagedata pid="90" name="ProgramRecap" tags="" position="2200,1575" size="100,100">&lt;h1&gt;Program Recap&lt;/h1&gt;
 Before we start it, let&#39;s recall the main points of this program:
@@ -1939,8 +1939,9 @@ Before we start it, let&#39;s recall the main points of this program:
   &lt;li&gt;Emotions are expressed as sensations in the body (e-motion)&lt;/li&gt;
   &lt;li&gt;Chronic pain originates from a significant event that is out of your control&lt;/li&gt;
   &lt;li&gt;As a result of this event you feel overwhelmed and leave some emotions unprocessed&lt;/li&gt;
+    &lt;li&gt;The repressing of emotions becomes a habit and now regular daily experiences can start to trigger your pain&lt;/li&gt;
   &lt;li&gt;Pain dissipates when unprocessed emotions are experienced AND you are feeling safe&lt;/li&gt;
-  &lt;li&gt;Understanding the cause of the pain is not necessary, only doing the solution is necessary&lt;/li&gt;
+  &lt;li&gt;Understanding the exact detailed cause of the pain is not necessary, only doing the solution is necessary&lt;/li&gt;
 &lt;/ul&gt;
 If you&#39;re comfortable with this, let&#39;s move on to the emotional meditation and describe the process.
 
@@ -1990,7 +1991,7 @@ What does it look like when you are aware of ALL your emotions? Once again, I sh
   Your browser does not support the video tag.
 &lt;/video&gt;
 
-This video is an excellent example of how you can handle things that trigger you. Feel the emotions first. Only then make the decisions and take any actions. The mistake most people make is block the negative emotions, take harmful actions first in an effort to make themselves feel better. This is why anger and rage are misunderstood. Most people don&#39;t allow themselves to feel anger and rage first, and then make the decision afterwards. You may have heart frequently, cool off first, calm down, then take action. Well this exactly what healing yourself is all about. Allow all emotions. Once the emotions have calmed down, then take action.
+This video is an excellent example of how you can handle things that trigger you. Feel the emotions first. Only then make the decisions and take any actions. The mistake most people make is block the negative emotions, take harmful actions first in an effort to make themselves feel better. This is why anger and rage are misunderstood. Most people don&#39;t allow themselves to feel anger and rage first, and then make the decision afterwards. You may have heard frequently, cool off first, calm down, then take action. Well this exactly what healing yourself is all about. Allow all emotions. Once the emotions have calmed down, then take action.
 
 [[Now lets cover the final aspect of your healing-&gt;Let&#39;s talk about exercise]]</tw-passagedata></tw-storydata>
 	<script id="script-sugarcube" type="text/javascript">
