--- a/index.html
+++ b/index.html
@@ -1643,6 +1643,7 @@ Old Cover
     	
         I went kayaking last week for the first time with NO sciatica afterwards.  I was so surprised that I went a second time and again, no sciatica.  My husband and I also had an argument last week, and that usually causes me tension afterwards, but I was fine.   So I&#39;m seeing results and will definitely continue with the daily journaling and emotional meditation.  Your program is excellent!</tw-passagedata><tw-passagedata pid="75" name="Begin" tags="" position="1300,50" size="100,100">&lt;h1&gt;INTRODUCTION&lt;/h1&gt;
 This is an //intentional// book. It&#39;s probably different than any self healing book that you have read. The focus of the book is to guide you to take the actions needed to heal yourself. Thousands have healed themselves with just this //basic information// and you can too. The book offers a natural and safe self-healing approach for chronic pain, requiring nothing more than YOU.
+
 [[Continue-&gt;Begin1]]</tw-passagedata><tw-passagedata pid="76" name="More mind body phrases" tags="" position="1050,2000" size="100,100">&lt;h1&gt;Overlap of the Physical and Emotional&lt;/h1&gt;
 Here are at least 100 phrases in the english language referring to the mind body connection. This list further highlights that the parts of the brain that feel emotions and physical pain overlap.
 
@@ -1789,7 +1790,7 @@ Please use the back button in the top left toolbar to return to your previous pa
     &lt;img src=&quot;title-flowery-good.jpeg&quot; alt=&quot;Cover&quot; style=&quot;width: 100%; height: auto;&quot;/&gt;
 
     &lt;!-- Glowing button --&gt;
-    &lt;span class=&quot;glow-button&quot;&gt;&lt;&lt;link &quot;BEGIN v4.1&quot;&gt;&gt;&lt;&lt;goto &quot;Begin&quot;&gt;&gt;&lt;&lt;/link&gt;&gt;&lt;/span&gt;
+    &lt;span class=&quot;glow-button&quot;&gt;&lt;&lt;link &quot;BEGIN v4.2&quot;&gt;&gt;&lt;&lt;goto &quot;Begin&quot;&gt;&gt;&lt;&lt;/link&gt;&gt;&lt;/span&gt;
 &lt;/div&gt;
 
 &lt;style&gt;
@@ -1979,13 +1980,14 @@ This video is an excellent example of how you can handle things that trigger you
 [[Now lets cover the final aspect of your healing-&gt;Let&#39;s talk about exercise]]</tw-passagedata><tw-passagedata pid="93" name="Begin1" tags="" position="1100,50" size="100,100">&lt;h1&gt;Healing Freely&lt;/h1&gt;
 Offered at no cost, this book embodies countless hours of hard work, creativity, and passion. It&#39;s free not because it lacks value, but because healing knowledge is so important that it deserves to be shared freely.
 	 
-I invite you to embark on this journey, understanding that its free availability is a gift to encourage your exploration—not a sign of lesser worth. In return, I ask for your sincere engagement and thoughtful reflection, which will sustain the spirit in which this book was created.
+This free availability is a gift to encourage your exploration—not a sign of lesser worth. In return, I ask for your sincere engagement which will sustain the spirit in which this book was created.
 
-Just like satellite GPS, which is free, let this book guide you on your path to healing.
+Let this book guide you on your path to healing.
+
 [[Continue-&gt;Begin2]]</tw-passagedata><tw-passagedata pid="94" name="Begin3" tags="" position="675,50" size="100,100">&lt;h1&gt;&lt;i&gt;DO&lt;/i&gt; to Understand&lt;/h1&gt;
 Like learning to ride a bicycle &lt;span class=&quot;big-text&quot;&gt;🚴‍&lt;/span&gt;, you cannot just read about how to ride. 
 You must get on the bicycle several times to be able to learn to ride it. 
-The same is for learning how to swim &lt;span class=&quot;big-text&quot;&gt;🏊‍&lt;/span&gt;. 
+The same is for learning how to swim &lt;span class=&quot;big-text&quot;&gt;🏊‍&lt;/span&gt; 
 You must splash around and try things for quite a bit before you can learn how to swim, no matter how much you read about it.
 
 So plan to set aside a couple of hours to &lt;i&gt;fully engage&lt;/i&gt; in the experiences described in this book and then set aside some time for a daily practice to master the techniques&lt;span class=&quot;secret-dot&quot;&gt;&lt;a data-passage=&quot;Let&#39;s talk about what to do next&quot;&gt;.&lt;/a&gt;&lt;/span&gt;
