--- a/index.html
+++ b/index.html
@@ -1839,7 +1839,7 @@ There is no rule to this. The same emotion may come up. A new one may come up. A
 </tw-passagedata><tw-passagedata pid="83" name="Contact Me" tags="" position="125,750" size="100,100">You can contact me via the [[feedback form-&gt;Feedback]].
 You can leave comments and your email address and I will reply to you directly.</tw-passagedata><tw-passagedata pid="84" name="SheldonTinman" tags="" position="350,150" size="100,100">&lt;h1&gt;But wait!&lt;/h1&gt;
 Before we begin, are you sure you want to read this book? 
-The consequence of reading this book will help you become pain free but you may have a different experience of life after this. Watch this clip from the series &quot;The Big Bang Theory&quot; and decide if you really want to continue?
+The consequence of reading this book will help you become pain free but you may have a different experience of life after this. Watch this 30 second clip from the series &quot;The Big Bang Theory&quot; and decide if you really want to continue?
 &lt;style&gt;
   .responsive-video {
     width: 100%;
