--- a/index.html
+++ b/index.html
@@ -1990,7 +1990,7 @@ So plan to set aside a couple of hours to &lt;i&gt;fully engage&lt;/i&gt; in the
 
 I wish you an insightful and transforming read&lt;span class=&quot;secret-dot&quot;&gt;&lt;a data-passage=&quot;I have experienced all of these emotions at some point in my life&quot;&gt;.&lt;/a&gt;&lt;/span&gt;
 
-[[Let&#39;s Begin-&gt;SheldonTinman]] </tw-passagedata><tw-passagedata pid="96" name="YouMayAskWhy" tags="" position="1725,325" size="100,100">&lt;h1&gt;Why Focus on the Solution?&lt;h1&gt;
+[[Let&#39;s Begin-&gt;SheldonTinman]] </tw-passagedata><tw-passagedata pid="96" name="YouMayAskWhy" tags="" position="1725,325" size="100,100">&lt;h1&gt;Why Focus on the Solution?&lt;/h1&gt;
 The honest answer from me is that the exact cause of the pain is still up in the air. There are many theories, but the good news is, it is completely unimportant to understand the reason why, the most important thing is to do DO THE SOLUTION.  What I can tell you for sure is that the SOLUTION WORKS. 1000&#39;s have healed themselves using the solution.
 
 It&#39;s like gravity. We still don&#39;t understand how gravity works. But I know that I can jump, catch a baseball or toss a coin into a wishing well - I know how to do the solution &lt;i&gt;without knowing&lt;/i&gt; how gravity is working.
