--- a/index.html
+++ b/index.html
@@ -1780,7 +1780,7 @@ Please use the back button in the top left toolbar to return to your previous pa
     &lt;img src=&quot;title-flowery-good.jpeg&quot; alt=&quot;Cover&quot; style=&quot;width: 100%; height: auto;&quot;/&gt;
 
     &lt;!-- Glowing button --&gt;
-    &lt;span class=&quot;glow-button&quot;&gt;&lt;&lt;link &quot;BEGIN v4.4&quot;&gt;&gt;&lt;&lt;goto &quot;Begin&quot;&gt;&gt;&lt;&lt;/link&gt;&gt;&lt;/span&gt;
+    &lt;span class=&quot;glow-button&quot;&gt;&lt;&lt;link &quot;BEGIN v4.5&quot;&gt;&gt;&lt;&lt;goto &quot;Begin&quot;&gt;&gt;&lt;&lt;/link&gt;&gt;&lt;/span&gt;
 &lt;/div&gt;
 
 &lt;style&gt;
@@ -1973,13 +1973,11 @@ Offered at no cost, this book embodies countless hours of hard work, creativity,
 	 
 This free availability is a gift to encourage your exploration—not a sign of lesser worth. In return, I ask for your sincere engagement which will sustain the spirit in which this book was created.
 
-Let this book guide you on your path to healing.
+Let this book be your guide to your healing.
 
 [[Continue-&gt;Begin2]]</tw-passagedata><tw-passagedata pid="94" name="Begin3" tags="" position="675,50" size="100,100">&lt;h1&gt;&lt;i&gt;DO&lt;/i&gt; to Understand&lt;/h1&gt;
 Like learning to ride a bicycle &lt;span class=&quot;big-text&quot;&gt;🚴‍&lt;/span&gt;, you cannot just read about how to ride. 
-You must get on the bicycle several times to be able to learn to ride it. 
-The same is for learning how to swim &lt;span class=&quot;big-text&quot;&gt;🏊‍&lt;/span&gt; 
-You must splash around and try things for quite a bit before you can learn how to swim, no matter how much you read about it.
+You must get on the bicycle several times to be able to learn to ride it and often you may fall. Persistence is the key.
 
 So plan to set aside a couple of hours to &lt;i&gt;fully engage&lt;/i&gt; in the experiences described in this book and then set aside some time for a daily practice to master the techniques&lt;span class=&quot;secret-dot&quot;&gt;&lt;a data-passage=&quot;Let&#39;s talk about what to do next&quot;&gt;.&lt;/a&gt;&lt;/span&gt;
 
@@ -1987,6 +1985,8 @@ So plan to set aside a couple of hours to &lt;i&gt;fully engage&lt;/i&gt; in the
 
 
 </tw-passagedata><tw-passagedata pid="95" name="Begin4" tags="" position="525,75" size="100,100">[[Feedback]] from you is invaluable, and this book is continually refined based on your insights and updates&lt;span class=&quot;secret-dot&quot;&gt;&lt;a data-passage=&quot;Book Dedication&quot;&gt;.&lt;/a&gt;&lt;/span&gt;
+
+This book is completely anomymous and no personal data is requested or collected.
 
 I wish you an insightful and transforming read&lt;span class=&quot;secret-dot&quot;&gt;&lt;a data-passage=&quot;I have experienced all of these emotions at some point in my life&quot;&gt;.&lt;/a&gt;&lt;/span&gt;
 
